corregir concatenacion String